Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/COUNT.html
+++ b/pr/347/learn/intrinsics/COUNT.html
@@ -44875,29 +44875,29 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Counts the number of .true. elements in a logical MASK, or, if the DIM
+<p>Counts the number of <strong>.true.</strong> elements in a logical <strong>mask</strong>, or, if the <strong>dim</strong>
 argument is supplied, counts the number of elements along each row of
-the array in the DIM direction. If the array has zero size, or all of
-the elements of MASK are false, then the result is 0.</p>
+the array in the <strong>dim</strong> direction. If the array has zero size, or all of
+the elements of <strong>mask</strong> are false, then the result is <strong>0</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
+      <dt><strong>mask</strong></dt>
       <dd>The type shall be <em>logical</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -44906,10 +44906,10 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
-the return value is of default integer kind. If DIM is present, the
-result is an array with a rank one less than the rank of ARRAY, and a
-size corresponding to the shape of ARRAY with the DIM dimension removed.</p>
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
+the return value is of default integer kind. If <strong>dim</strong> is present, the
+result is an array with a rank one less than the rank of <strong>array</strong>, and a
+size corresponding to the shape of <strong>array</strong> with the <strong>dim</strong> dimension removed.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
