--- a/pr/347/learn/intrinsics/CO_MIN.html
+++ b/pr/347/learn/intrinsics/CO_MIN.html
@@ -44855,13 +44855,13 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>co_min determines element-wise the minimal value of A on all images of
+<p>co_min determines element-wise the minimal value of <strong>a</strong> on all images of
 the current team. If result_image is present, the minimal values are
-returned in A on the specified image only and the value of A on the
+returned in <strong>a</strong> on the specified image only and the value of <strong>a</strong> on the
 other images become undefined. If result_image is not present, the
 value is returned on all images. If the execution was successful and
-STAT is present, it is assigned the value zero. If the execution failed,
-STAT gets assigned a nonzero value and, if present, ERRMSG gets assigned
+<strong>stat</strong> is present, it is assigned the value zero. If the execution failed,
+<strong>stat</strong> gets assigned a nonzero value and, if present, <strong>errmsg</strong> gets assigned
 a value describing the occurred error.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -44869,7 +44869,7 @@ a value describing the occurred error.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>shall be an integer, real or character variable, which has the same
 type and type parameters on all images of the team.</dd>
     </dl>
@@ -44884,13 +44884,13 @@ current team.</dd>
   </li>
   <li>
     <dl>
-      <dt><strong>STAT</strong></dt>
+      <dt><strong>stat</strong></dt>
       <dd>(optional) a scalar integer variable</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>ERRMSG</strong></dt>
+      <dt><strong>errmsg</strong></dt>
       <dd>(optional) a scalar character variable</dd>
     </dl>
   </li>
