--- a/pr/347/learn/intrinsics/CO_REDUCE.html
+++ b/pr/347/learn/intrinsics/CO_REDUCE.html
@@ -44865,17 +44865,17 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>co_reduce determines element-wise the reduction of the value of A on
-all images of the current team. The pure function passed as OPERATION is
-used to pairwise reduce the values of A by passing either the value of A
+<p>co_reduce determines element-wise the reduction of the value of <strong>a</strong> on
+all images of the current team. The pure function passed as <strong>operation</strong> is
+used to pairwise reduce the values of <strong>a</strong> by passing either the value of <strong>a</strong>
 of different images or the result values of such a reduction as
-argument. If A is an array, the reduction is done element wise. If
-result_image is present, the result values are returned in A on the
-specified image only and the value of A on the other images become
+argument. If <strong>a</strong> is an array, the reduction is done element wise. If
+result_image is present, the result values are returned in <strong>a</strong> on the
+specified image only and the value of <strong>a</strong> on the other images become
 undefined. If result_image is not present, the value is returned on all
-images. If the execution was successful and STAT is present, it is
-assigned the value zero. If the execution failed, STAT gets assigned a
-nonzero value and, if present, ERRMSG gets assigned a value describing
+images. If the execution was successful and <strong>stat</strong> is present, it is
+assigned the value zero. If the execution failed, <strong>stat</strong> gets assigned a
+nonzero value and, if present, <strong>errmsg</strong> gets assigned a value describing
 the occurred error.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -44883,7 +44883,7 @@ the occurred error.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>is an <strong>intent</strong>(inout) argument and shall be nonpolymorphic. If it
 is allocatable, it shall be allocated; if it is a pointer, it shall
 be associated. A shall have the same type and type parameters on all
@@ -44893,7 +44893,7 @@ on all images.</dd>
   </li>
   <li>
     <dl>
-      <dt><strong>OPERATION</strong></dt>
+      <dt><strong>operation</strong></dt>
       <dd>pure function with two scalar nonallocatable arguments, which shall
 be nonpolymorphic and have the same type and type parameters as A.
 The function shall return a nonallocatable scalar of the same type
@@ -44917,13 +44917,13 @@ of the current team.</p>
   </li>
   <li>
     <dl>
-      <dt><strong>STAT</strong></dt>
+      <dt><strong>stat</strong></dt>
       <dd>(optional) a scalar integer variable</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>ERRMSG</strong></dt>
+      <dt><strong>errmsg</strong></dt>
       <dd>(optional) a scalar character variable</dd>
     </dl>
   </li>
