--- a/pr/347/learn/intrinsics/CSHIFT.html
+++ b/pr/347/learn/intrinsics/CSHIFT.html
@@ -44880,34 +44880,32 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p><strong>cshift</strong>(array, shift [, dim]) performs a circular shift on elements
-of ARRAY along the dimension of DIM. If DIM is omitted it is taken to be</p>
-<ol>
-  <li>DIM is a scalar of type <em>integer</em> in the range of 1 &lt;= DIM &lt;= n,
-where “n” is the rank of ARRAY. If the rank of ARRAY is one, then all
-elements of ARRAY are shifted by SHIFT places. If rank is greater than
-one, then all complete rank one sections of ARRAY along the given
+of <strong>array</strong> along the dimension of <strong>dim</strong>. If <strong>dim</strong> is omitted it is taken to be
+<strong>1</strong>. <strong>dim</strong> is a scalar of type <em>integer</em> in the range of <strong>1 &lt;= dim &lt;= n</strong>,
+where “n” is the rank of <strong>array</strong>. If the rank of <strong>array</strong> is one, then all
+elements of <strong>array</strong> are shifted by <strong>shift</strong> places. If rank is greater than
+one, then all complete rank one sections of <strong>array</strong> along the given
 dimension are shifted. Elements shifted out one end of each rank one
-section are shifted back in the other end.</li>
-</ol>
+section are shifted back in the other end.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an array of any type.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
@@ -44915,7 +44913,7 @@ section are shifted back in the other end.</li>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>Returns an array of same type and rank as the ARRAY argument.</p>
+<p>Returns an array of same type and rank as the <strong>array</strong> argument.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
