--- a/pr/347/learn/intrinsics/EPSILON.html
+++ b/pr/347/learn/intrinsics/EPSILON.html
@@ -44908,10 +44908,10 @@ precisely</p>
 <p>It may be thought of as the distance from 1.0 to the next largest
 floating point number.</p>
 
-<p>One use of <strong>epsilon</strong>(3) is to select a delta value for algorithms that
-search until the calculation is within <strong>delta</strong> of an estimate.</p>
+<p>One use of <strong>epsilon</strong>(3) is to select a <em>delta</em> value for algorithms that
+search until the calculation is within <em>delta</em> of an estimate.</p>
 
-<p>If delta is too small the algorithm might never halt, as a computation
+<p>If <em>delta</em> is too small the algorithm might never halt, as a computation
 summing values smaller than the decimal resolution of the data type does
 not change.</p>
 
@@ -44948,7 +44948,7 @@ not change.</p>
    </span><span class="c1">! the value changes with the kind of the real value though</span><span class="w">
    </span><span class="k">print</span><span class="w"> </span><span class="o">*</span><span class="p">,</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="n">y</span><span class="p">)</span><span class="w">
 
-   </span><span class="c1">! adding and subtracing epsilon(x) changes x</span><span class="w">
+   </span><span class="c1">! adding and subtracting epsilon(x) changes x</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="n">x</span><span class="w"> </span><span class="o">==</span><span class="w"> </span><span class="n">x</span><span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="n">x</span><span class="p">)</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="n">x</span><span class="w"> </span><span class="o">==</span><span class="w"> </span><span class="n">x</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="n">x</span><span class="p">)</span><span class="w">
 
