--- a/pr/347/learn/intrinsics/SELECTED_CHAR_KIND.html
+++ b/pr/347/learn/intrinsics/SELECTED_CHAR_KIND.html
@@ -45100,7 +45100,7 @@ Character Set, UCS-4) which is commonly known as “Unicode”.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>NAME</strong></dt>
+      <dt><strong>name</strong></dt>
       <dd>Shall be a scalar and of the default character type.</dd>
     </dl>
   </li>
