--- a/pr/347/learn/intrinsics/SELECTED_INT_KIND.html
+++ b/pr/347/learn/intrinsics/SELECTED_INT_KIND.html
@@ -45092,8 +45092,8 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p><strong>selected_int_kind</strong>(r) return the kind value of the smallest integer
-type that can represent all values ranging from <strong>-10</strong>**R (exclusive)
-to 10**R (exclusive). If there is no integer kind that accommodates
+type that can represent all values ranging from <strong>-10**r</strong> (exclusive)
+to <strong>10**r</strong> (exclusive). If there is no integer kind that accommodates
 this range, selected_int_kind returns <strong>-1</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -45101,7 +45101,7 @@ this range, selected_int_kind returns <strong>-1</strong>.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>R</strong></dt>
+      <dt><strong>r</strong></dt>
       <dd>Shall be a scalar and of type <em>integer</em>.</dd>
     </dl>
   </li>
