--- a/pr/347/learn/intrinsics/SHAPE.html
+++ b/pr/347/learn/intrinsics/SHAPE.html
@@ -45104,14 +45104,14 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>SOURCE</strong></dt>
-      <dd>Shall be an array or scalar of any type. If SOURCE is a pointer it
+      <dt><strong>source</strong></dt>
+      <dd>Shall be an array or scalar of any type. If <strong>source</strong> is a pointer it
 must be associated and allocatable arrays must be allocated.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -45120,10 +45120,10 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>An <em>integer</em> array of rank one with as many elements as SOURCE has
+<p>An <em>integer</em> array of rank one with as many elements as <strong>source</strong> has
 dimensions. The elements of the resulting array correspond to the extend
-of SOURCE along the respective dimensions. If SOURCE is a scalar, the
-result is the rank one array of size zero. If KIND is absent, the return
+of <strong>source</strong> along the respective dimensions. If <strong>source</strong> is a scalar, the
+result is the rank one array of size zero. If <strong>kind</strong> is absent, the return
 value has the default integer kind otherwise the specified kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
