--- a/pr/347/learn/intrinsics/SHIFTL.html
+++ b/pr/347/learn/intrinsics/SHIFTL.html
@@ -45101,23 +45101,23 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Returns a value corresponding to I with all of the bits shifted left by
-SHIFT places. If the absolute value of SHIFT is greater than
-<strong>BIT_SIZE</strong>(I), the value is undefined. Bits shifted out from the left
-end are lost, and bits shifted in from the right end are set to 0.</p>
+<p>Returns a value corresponding to <strong>i</strong> with all of the bits shifted left by
+<strong>shift</strong> places. If the absolute value of <strong>shift</strong> is greater than
+<strong>bit_size(i)</strong>, the value is undefined. Bits shifted out from the left
+end are lost, and bits shifted in from the right end are set to <strong>0</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
