--- a/pr/347/learn/intrinsics/SIN.html
+++ b/pr/347/learn/intrinsics/SIN.html
@@ -45131,7 +45131,7 @@ hypotenuse.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>RESULT</strong></dt>
+      <dt><strong>result</strong></dt>
       <dd>The return value has the same type and kind as <strong>x</strong>.</dd>
     </dl>
   </li>
