--- a/pr/347/learn/intrinsics/STORAGE_SIZE.html
+++ b/pr/347/learn/intrinsics/STORAGE_SIZE.html
@@ -45121,20 +45121,20 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Returns the storage size of argument A in bits.</p>
+<p>Returns the storage size of argument <strong>a</strong> in bits.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>Shall be a scalar or array of any type.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) shall be a scalar integer constant expression.</dd>
     </dl>
   </li>
@@ -45143,9 +45143,9 @@
 <h2 id="returns"><strong>Returns</strong></h2>
 
 <p>The result is a scalar integer with the kind type parameter specified by
-KIND (or default integer type if KIND is missing). The result value is
+<strong>kind</strong> (or default integer type if <strong>kind</strong> is missing). The result value is
 the size expressed in bits for an element of an array that has the
-dynamic type and type parameters of A.</p>
+dynamic type and type parameters of <strong>a</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
