--- a/pr/347/learn/intrinsics/TRANSPOSE.html
+++ b/pr/347/learn/intrinsics/TRANSPOSE.html
@@ -45147,7 +45147,7 @@ value <strong>matrix</strong>(j, i), for all i, j.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>MATRIX</strong></dt>
+      <dt><strong>matrix</strong></dt>
       <dd>Shall be an array of any type and have a rank of two.</dd>
     </dl>
   </li>
@@ -45155,8 +45155,8 @@ value <strong>matrix</strong>(j, i), for all i, j.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The result has the same type as MATRIX, and has shape [ m, n ] if
-MATRIX has shape [ n, m ].</p>
+<p>The result has the same type as <strong>matrix</strong>, and has shape [ m, n ] if
+<strong>matrix</strong> has shape [ n, m ].</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
