--- a/pr/347/learn/intrinsics/SHIFTA.html
+++ b/pr/347/learn/intrinsics/SHIFTA.html
@@ -45095,13 +45095,13 @@
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
-<p>result = <strong>SHIFTA</strong>(I, SHIFT)</p>
+<p>result = <strong>shifta</strong>(i, shift)</p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Returns a value corresponding to I with all of the bits shifted right by
-SHIFT places. If the absolute value of SHIFT is greater than
-<strong>BIT_SIZE</strong>(I), the value is undefined. Bits shifted out from the
+SHIFT places. If the absolute value of <strong>shift</strong> is greater than
+<strong>bit_size(i)</strong>, the value is undefined. Bits shifted out from the
 right end are lost. The fill is arithmetic: the bits shifted in from the
 left end are equal to the leftmost bit, which in two’s complement
 representation is the sign bit.</p>
@@ -45111,13 +45111,13 @@ representation is the sign bit.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
@@ -45125,7 +45125,7 @@ representation is the sign bit.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of the same kind as I.</p>
+<p>The return value is of type <em>integer</em> and of the same kind as <strong>i</strong>.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
 
