Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/GET_ENVIRONMENT_VARIABLE.html
+++ b/pr/347/learn/intrinsics/GET_ENVIRONMENT_VARIABLE.html
@@ -44966,7 +44966,7 @@ being updated concurrently.</p>
     </dl>
 
     <p>Shall be a scalar of type <em>character</em> and of default kind.
-The value of NAME is stored in <strong>value</strong>. If <strong>value</strong> is not large enough
+The value of <strong>name</strong> is stored in <strong>value</strong>. If <strong>value</strong> is not large enough
 to hold the data, it is truncated. If <strong>name</strong> is not set, <strong>value</strong> will be
 filled with blanks.</p>
   </li>
