Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/EXP.html
+++ b/pr/347/learn/intrinsics/EXP.html
@@ -44912,18 +44912,18 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>exp</strong>(x) computes the base “e” exponential of <strong>x</strong> where “e” is
-Euler’s constant.</p>
+<p><strong>exp</strong>(x) computes the base “<em>e</em>” exponential of <strong>x</strong> where “<em>e</em>” is
+<em>Euler’s constant</em>.</p>
 
 <p>If <strong>x</strong> is of type <em>complex</em>, its imaginary part is regarded as a value
-in radians such that</p>
+in radians such that (see <em>Euler’s formula</em>):</p>
 
 <p>if 
-    <strong>cx=(re,im)</strong> 
+     <strong>cx=(re,im)</strong> 
 then 
-    <strong>exp(cx)=exp(re)*cmplx(cos(im),sin(im))</strong></p>
+     <strong>exp(cx)=exp(re)*cmplx(cos(im),sin(im))</strong></p>
 
-<p>Since exp(3) is the inverse function of log(3) the maximum valid magnitude
+<p>Since <strong>exp</strong>(3) is the inverse function of <strong>log</strong>(3) the maximum valid magnitude
 of the real component of <strong>x</strong> is <strong>log(huge(x))</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
