Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/DSHIFTR.html
+++ b/pr/347/learn/intrinsics/DSHIFTR.html
@@ -44888,37 +44888,37 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>dshiftr</strong>(3) - [BIT MANIPULATION] combines bits of arguments I and J
+<p><strong>dshiftr</strong>(3) - [BIT MANIPULATION] combines bits of arguments <strong>i</strong> and <strong>j</strong>
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
-<p>result = <strong>DSHIFTL</strong>(I, J, SHIFT)</p>
+<p>result = <strong>dshiftl</strong>(i, j, shift)</p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>DSHIFTR</strong>(I, J, SHIFT) combines bits of I and J. The leftmost SHIFT
-bits of the result are the rightmost SHIFT bits of I, and the remaining
-bits are the leftmost bits of J.</p>
+<p><strong>dshiftr(i, j, shift)</strong> combines bits of <strong>i</strong> and <strong>j</strong>. The leftmost <strong>shift</strong>
+bits of the result are the rightmost <strong>shift</strong> bits of <strong>i</strong>, and the remaining
+bits are the leftmost bits of <strong>j</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>Shall be of type <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>J</strong></dt>
-      <dd>Shall be of type <em>integer</em>, and of the same kind as I.</dd>
+      <dt><strong>j</strong></dt>
+      <dd>Shall be of type <em>integer</em>, and of the same kind as <strong>i</strong>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>Shall be of type <em>integer</em>.</dd>
     </dl>
   </li>
@@ -44926,7 +44926,7 @@ bits are the leftmost bits of J.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value has same type and kind as I.</p>
+<p>The return value has same type and kind as <strong>i</strong>.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
 
