--- a/pr/347/learn/intrinsics.html
+++ b/pr/347/learn/intrinsics.html
@@ -44777,12 +44777,18 @@ unfamiliar with  the procedure.</p>
 discussions in Fortran Discourse)</li>
 </ul>
 
-<p>these documents aspire to be a valuable asset for Fortran programmers.</p>
+<p>these documents strive to be a valuable asset for Fortran programmers.</p>
 
 <p>This is a community-driven resource and everyone is encouraged to contribute 
 to the documents. For contribution guidelines see
 <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/MINIBOOKS.md">MINIBOOKS</a>
 and the following Copyright guidelines.</p>
+
+<h2 id="see-also">See also</h2>
+<ul>
+  <li>The <a href="https://stdlib.fortran-lang.org/">Fortran stdlib</a> project</li>
+  <li><a href="https://fortran-lang.org/packages/fpm">fpm(1)</a> packages, many of which are general-purpose libraries/modules</li>
+</ul>
 
 <h2 id="text-content-copyrights">Text Content Copyrights</h2>
 
