--- a/pr/347/learn/intrinsics/LEN_TRIM.html
+++ b/pr/347/learn/intrinsics/LEN_TRIM.html
@@ -45063,14 +45063,14 @@ of arguments, and search for certain arguments:</p>
 <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>,
 <a href="INDEX"><strong>index</strong>(3)</a>,
 <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
-<a href="LEN"><strong>len</strong>(3)</a>,
 <a href="SCAN"><strong>scan</strong>(3)</a>,
 <a href="VERIFY"><strong>verify</strong>(3)</a></p>
   </li>
   <li>
     <p><strong>Nonelemental:</strong>
 <a href="REPEAT"><strong>repeat</strong>(3)</a>,
-<a href="TRIM"><strong>trim</strong>(3)</a></p>
+<a href="TRIM"><strong>trim</strong>(3)</a>
+<a href="LEN"><strong>len</strong>(3)</a>,</p>
   </li>
 </ul>
 
