Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/INDEX.html
+++ b/pr/347/learn/intrinsics/INDEX.html
@@ -45046,11 +45046,13 @@ of arguments, and search for certain arguments:</p>
 <ul>
   <li>
     <p><strong>Elemental:</strong>
-<a href="ADJUSTL"><strong>adjustl</strong>(3)</a>, <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>, <a href="INDEX"><strong>index</strong>(3)</a>, <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
+<a href="ADJUSTL"><strong>adjustl</strong>(3)</a>, <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>, <a href="INDEX"><strong>index</strong>(3)</a>,
 <a href="SCAN"><strong>scan</strong>(3)</a>, <a href="VERIFY"><strong>verify</strong>(3)</a></p>
   </li>
   <li>
     <p><strong>Nonelemental:</strong>
+<a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
+<a href="LEN"><strong>len</strong>(3)</a>,
 <a href="REPEAT"><strong>repeat</strong>(3)</a>, <a href="TRIM"><strong>trim</strong>(3)</a></p>
   </li>
 </ul>
