--- a/pr/347/learn/intrinsics/LGE.html
+++ b/pr/347/learn/intrinsics/LGE.html
@@ -45036,8 +45036,7 @@ of arguments, and search for certain arguments:</p>
   <li><strong>Elemental:</strong>
  <a href="ADJUSTL"><strong>adjustl</strong>(3)</a>,
  <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>,
- <a href="INDEX"><strong>index</strong>(3)</a>,
- <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,</li>
+ <a href="INDEX"><strong>index</strong>(3)</a>,</li>
 </ul>
 
 <p><a href="SCAN"><strong>scan</strong>(3)</a>,
@@ -45045,6 +45044,8 @@ of arguments, and search for certain arguments:</p>
 
 <ul>
   <li><strong>Nonelemental:</strong>
+ <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
+ <a href="LEN"><strong>len</strong>(3)</a>,
  <a href="REPEAT"><strong>repeat</strong>(3)</a>,
  <a href="TRIM"><strong>trim</strong>(3)</a></li>
 </ul>
