--- a/pr/347/learn/intrinsics/REPEAT.html
+++ b/pr/347/learn/intrinsics/REPEAT.html
@@ -45142,12 +45142,13 @@ Shall be scalar and of type <em>integer</em>.</dd>
 <a href="ADJUSTL"><strong>adjustl</strong>(3)</a>,
 <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>,
 <a href="INDEX"><strong>index</strong>(3)</a>,
-<a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
 <a href="SCAN"><strong>scan</strong>(3)</a>,
 <a href="VERIFY"><strong>verify</strong>(3)</a></p>
   </li>
   <li>
     <p><strong>Non-elemental:</strong>
+<a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
+<a href="LEN"><strong>len</strong>(3)</a>,
 <a href="REPEAT"><strong>repeat</strong>(3)</a>,
 <a href="TRIM"><strong>trim</strong>(3)</a></p>
   </li>
